--- a/ci.yml
+++ b/ci.yml
@@ -1,2 +1,6 @@
 - name: Gatsby Publish
   uses: enriikke/gatsby-gh-pages-action@v2.2.0
+  with:
+    access-token: ${{ secrets.ACCESS_TOKEN }}
+    deploy-branch: gh-pages
+         
