--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,15 @@
 name: Gatsby Publish
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  publish:
-    name: publish to github pages
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
       - uses: actions/checkout@v1
-      - uses: enriikke/gatsby-gh-pages-action@v2.2.0
+      - uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          DEPLOY-BRANCH: main
-          ACCESS-TOKEN: ${{ secrets.ACCESS_TOKEN }}
-
-    
+          access-token: ${{ secrets.ACCESS_TOKEN }}
